Fixed scroll bug introduced by wrap margin

--- a/css/base.css
+++ b/css/base.css
@@ -11,7 +11,7 @@ body {
 }
 
 #wrap {
-    padding-top: 15%;
+    padding-top: 18%;
     margin: auto;
     width: 200px;
     opacity: 0.75;
@@ -62,7 +62,7 @@ nav a:hover {
 
 @media (min-width: 400px) {
     #wrap {
-        margin: 50px auto 0px;
+        margin: 0px auto 0px;
         width: 90%;
         text-align: center;
     }
